--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="navbar">
                 <ul>
                     <li><a class="activ" href="index.html">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Blog</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a class="btn" href="">Contact Me</a></li>
+                    <li><a class="btn" href="contact.html">Contact Me</a></li>
                 </ul>
 
             </div>
