--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/about.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -17,16 +18,16 @@
                 <img src="./assets/img/imageProxy.webp" alt="">
                 <h3>LITERACY</h3>
             </div>
-            <div class="navbar">
-                <ul>
+            <nav>
+                <ul class="header-nav">
                     <li><a class="activ" href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a class="btn" href="contact.html">Contact Me</a></li>
                 </ul>
-
-            </div>
+            </nav>
+            <i class="fa-solid fa-bars nav-hamburger"></i>
         </div>
     </header>
 
