--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -15,16 +18,16 @@
                 <img src="./assets/img/imageProxy.webp" alt="">
                 <h3>LITERACY</h3>
             </div>
-            <div class="navbar">
-                <ul>
+            <nav>
+                <ul class="header-nav">
                     <li><a class="activ" href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a class="btn" href="contact.html">Contact Me</a></li>
                 </ul>
-
-            </div>
+            </nav>
+            <i class="fa-solid fa-bars nav-hamburger"></i>
         </div>
     </header>
 
@@ -47,7 +50,7 @@
         </div>
 
 
-        <div class="featured">
+        <div class="container featured-container">
             <div class="featured-top">
                 <h1>Featured Stories</h1>
             </div>
@@ -101,28 +104,25 @@
 
 
         <div class="followme">
-            <div class="container">
+            <div class="container followme-container">
                 <div class="followme-top">
                     <h2>Follow Me</h2>
                     <a href="">@literacy.blog</a>
                 </div>
                 <div class="followme-bottom">
                     <div class="follow-image">
-                        <a href="./assets/img/imageProxy (5).webp"> <img src="./assets/img/imageProxy (5).webp"
-                                alt=""></a>
+                        <img src="./assets/img/imageProxy (5).webp" alt="">
                     </div>
                     <div class="follow-image">
-                        <a href="./assets/img/imageProxy (6).webp"> <img src="./assets/img/imageProxy (6).webp"
-                                alt=""></a>
+                        <img src="./assets/img/imageProxy (6).webp" alt="">
                     </div>
                     <div class="follow-image">
-                        <a href="./assets/img/imageProxy (7).webp"><img src="./assets/img/imageProxy (7).webp"
-                                alt=""></a>
+                        <img src="./assets/img/imageProxy (7).webp" alt="">
                     </div>
                     <div class="follow-image">
-                        <a href="./assets/img/imageProxy (8).webp"><img src="./assets/img/imageProxy (8).webp"
-                                alt=""></a>
+                        <img src="./assets/img/imageProxy (8).webp" alt="">
                     </div>
+
                 </div>
             </div>
         </div>
